--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,14 @@ Package: regexcite
 Title: Looks Cool and Smells Nice
 Version: 0.0.0.9000
 Authors@R: 
-    person("Eleanor", "Lee", , "ehl6@calvin.edu", role = c("aut", "cre")
-Description: What the package does (one paragraph).
+    person("Eleanor", "Lee", , "ehl6@calvin.edu", role = c("aut", "cre"))
+Description: This package holds example "convenience functions."
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    stringr
